--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.9",
@@ -22,7 +23,7 @@
     "expo-crypto": "~13.0.0",
     "expo-document-picker": "~11.10.0",
     "expo-file-system": "~16.0.0",
-    "expo-font": "~11.10.0",
+    "expo-font": "~11.10.3",
     "expo-linking": "~6.2.0",
     "expo-router": "~3.4.0",
     "expo-secure-store": "~12.8.0",
