--- a/backup/package.json
+++ b/backup/package.json
@@ -3,26 +3,23 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
+    "start": "npm run preflight && expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:android": "eas build --platform android",
-    "build:ios": "eas build --platform ios",
-    "prebuild": "expo prebuild",
+    "setup": "node setup.js",
+    "preflight": "node preflight.js",
     "lint": "eslint .",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.9",
     "@supabase/supabase-js": "^2.39.0",
-    "expo": "~51.0.28",
+    "expo": "~51.0.39",
     "expo-auth-session": "~5.5.2",
-    "expo-build-properties": "~0.12.5",
     "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.29",
     "expo-document-picker": "~12.0.2",
@@ -30,35 +27,34 @@
     "expo-font": "~12.0.10",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
+    "expo-router": "~3.5.24",
+    "expo-screen-capture": "~6.0.1",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
-    "luxon": "^3.4.4",
+    "luxon": "^3.7.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.0",
-    "react-native": "0.74.5",
+    "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.6",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/luxon": "^3.4.0",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "tailwindcss": "3.3.2",
     "typescript": "~5.3.3"
-  },
-  "overrides": {
-    "react-refresh": "~0.14.0"
   },
   "private": true
 }
