Fix: Razorpay config using single module strategy to resolve Metro bundling issues

--- a/app.json
+++ b/app.json
@@ -52,7 +52,7 @@
       ],
       "expo-font"
     ],
-    "scheme": "mentorplatform",
+    "scheme": "crackjobs",
     "extra": {
       "router": {
         "origin": false
