feat: SEO overhaul, Layout Refactor, and Social Login Fix
SEO & Architecture: Implemented PageLayout, Header, Footer. Centralized styles in LegalPageStyles.ts using theme tokens. Added Schema.org JSON-LD and semantic HTML to all static pages.

Auth & Fixes: Fixed OAuth (Google/LinkedIn) using expo-web-browser manual session. Updated auth.service.ts. Fixed footer layout.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,32 @@
 {
-  "name": "mentor-interview-platform",
+  "name": "crackjobs",
   "version": "1.0.0",
+  "description": "Master your interview skills with expert mentors. Practice mock interviews and land your dream job.",
+  "keywords": [
+    "interview preparation",
+    "mock interviews",
+    "career coaching",
+    "job interview practice",
+    "mentor platform",
+    "interview feedback",
+    "career development",
+    "job search",
+    "technical interviews",
+    "behavioral interviews",
+    "PM interviews",
+    "product manager",
+    "SDE interviews",
+    "software engineer",
+    "HR interviews",
+    "data science interviews",
+    "frontend engineer",
+    "backend engineer",
+    "interview skills",
+    "job coaching",
+    "career mentor",
+    "job preparation"
+  ],
+  "author": "Manan Vashist",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
@@ -23,12 +49,14 @@
     "expo": "~51.0.28",
     "expo-auth-session": "~5.5.2",
     "expo-build-properties": "~0.12.5",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-modules-core": "~1.12.26",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
