--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Mentor Interview Platform",
-    "slug": "mentor-interview-platform",
+    "name": "CrackJobs",
+    "slug": "crackjobs",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -9,22 +9,26 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#11998e"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.mentorplatform.app",
-      "buildNumber": "1.0.0"
+      "bundleIdentifier": "com.crackjobs.app",
+      "buildNumber": "1.0.0",
+      "infoPlist": {
+        "CFBundleDisplayName": "CrackJobs",
+        "CFBundleName": "CrackJobs"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#11998e"
       },
-      "package": "com.mentorplatform.app",
+      "package": "com.crackjobs.app",
       "versionCode": 1,
       "permissions": [
         "CAMERA",
@@ -35,7 +39,29 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "bundler": "metro"
+      "bundler": "metro",
+      "name": "CrackJobs - Ace Your Next Interview",
+      "shortName": "CrackJobs",
+      "description": "Master your interview skills with expert mentors. Practice mock interviews across PM, SDE, HR roles, get personalized feedback, and land your dream job. 3-round structured interview preparation platform.",
+      "themeColor": "#11998e",
+      "backgroundColor": "#ffffff",
+      "lang": "en",
+      "scope": "/",
+      "startUrl": "/",
+      "display": "standalone",
+      "orientation": "portrait-primary",
+      "categories": ["education", "business", "productivity"],
+      "screenshots": [],
+      "related_applications": [],
+      "prefer_related_applications": false,
+      "meta": {
+        "apple-mobile-web-app-capable": "yes",
+        "apple-mobile-web-app-status-bar-style": "default",
+        "apple-mobile-web-app-title": "CrackJobs",
+        "application-name": "CrackJobs",
+        "msapplication-TileColor": "#11998e",
+        "msapplication-tap-highlight": "no"
+      }
     },
     "plugins": [
       "expo-router",
@@ -61,6 +87,26 @@
         "projectId": "b4bb97e0-d7da-494a-86e0-04f5f41faebe"
       }
     },
-    "owner": "mananvashist"
+    "owner": "mananvashist",
+    "description": "Master your interview skills with expert mentors. Practice mock interviews across different roles (PM, SDE, HR, Data Science), get detailed feedback after each round, and crack your dream job. Structured 3-round interview preparation with personalized mentorship.",
+    "primaryColor": "#11998e",
+    "keywords": [
+      "interview preparation",
+      "mock interviews",
+      "career coaching",
+      "job interview practice",
+      "mentor platform",
+      "interview feedback",
+      "career development",
+      "job search",
+      "technical interviews",
+      "behavioral interviews",
+      "PM interviews",
+      "SDE interviews",
+      "HR interviews",
+      "data science interviews",
+      "interview skills",
+      "job coaching"
+    ]
   }
 }
