--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.9",
     "@supabase/supabase-js": "^2.39.0",
