--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "build:web": "expo export --platform web",
     "build:android": "eas build --platform android",
     "build:ios": "eas build --platform ios",
     "prebuild": "expo prebuild",
     "lint": "eslint .",
     "type-check": "tsc --noEmit"
+  },
+  "engines": {
+    "node": ">=18 <21"
   },
   "dependencies": {
     "@expo-google-fonts/dancing-script": "^0.4.2",
