--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.9",
     "@supabase/supabase-js": "^2.39.0",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
     "expo-auth-session": "~5.5.2",
     "expo-build-properties": "~0.12.5",
