--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.9",
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/supabase-js": "^2.87.0",
     "date-fns": "^4.1.0",
     "expo": "~51.0.28",
     "expo-auth-session": "~5.5.2",
@@ -91,6 +91,7 @@
     "@babel/core": "^7.20.0",
     "@types/luxon": "^3.4.0",
     "@types/react": "~18.2.79",
+    "supabase": "^2.65.6",
     "tailwindcss": "3.3.2",
     "typescript": "~5.3.3"
   },
