--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build:web": "expo export --platform web",
+    "build:web": "expo export --platform web && node scripts/copy-public-files.js",
     "build:android": "eas build --platform android",
     "build:ios": "eas build --platform ios",
     "prebuild": "expo prebuild",
@@ -54,6 +54,7 @@
     "@supabase/supabase-js": "^2.87.0",
     "date-fns": "^4.1.0",
     "expo": "~51.0.28",
+    "expo-asset": "~10.0.10",
     "expo-auth-session": "~5.5.2",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
