--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,8 @@
   "name": "crackjobs-web",
   "compatibility_date": "2024-12-04",
   "assets": {
-    "directory": "./dist"
+    "directory": "./dist",
+    "html_handling": "auto-trailing-slash",
+    "not_found_handling": "single-page-application"
   }
 }
