--- a/app.json
+++ b/app.json
@@ -44,7 +44,7 @@
     "web": {
       "favicon": "./assets/favicon.png",
       "bundler": "metro",
-      "name": "CrackJobs - Mock interviews so you ace Your Next Interview",
+      "name": "CrackJobs - Anonymous Mock interviews with real professionals",
       "shortName": "CrackJobs",
       "description": "Master your interview skills with expert mentors. Practice mock interviews across PM, DA/DS, HR roles, get personalized feedback, and land your dream job. 2-round structured interview preparation platform.",
       "themeColor": "#11998e",
