Fix splash on web

--- a/app.json
+++ b/app.json
@@ -46,7 +46,7 @@
       "bundler": "metro",
       "name": "CrackJobs - Anonymous Mock interviews with real professionals",
       "shortName": "CrackJobs",
-      "description": "Master your interview skills with expert mentors. Practice mock interviews across PM, DA/DS, HR roles, get personalized feedback, and land your dream job. 2-round structured interview preparation platform.",
+      "description": "Master your interview skills with expert mentors. Practice mock interviews across Product Management, Data Analayst/Data Science, HR roles, get personalized feedback, and land your dream job. Structured interview preparation platform.",
       "themeColor": "#11998e",
       "backgroundColor": "#ffffff",
       "lang": "en",
