--- a/package.json
+++ b/package.json
@@ -1,6 +1,34 @@
 {
+  "name": "mentor-interview-platform",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
     "build:web": "expo export --platform web && node scripts/copy-public-files.js && node scripts/generate-static-seo.js"
+  },
+  "dependencies": {
+    "expo": "~51.0.0",
+    "expo-router": "~3.5.0",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-web": "~0.19.10",
+    "react-helmet-async": "^2.0.5",
+    "@expo/vector-icons": "^14.0.0",
+    "expo-constants": "~16.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-system-ui": "~3.0.0",
+    "expo-web-browser": "~13.0.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3",
+    "react-snap": "^1.23.0"
   },
   "reactSnap": {
     "source": "dist",
@@ -35,5 +63,6 @@
       "/auth",
       "/auth/*"
     ]
-  }
+  },
+  "private": true
 }
