--- a/package.json
+++ b/package.json
@@ -10,47 +10,59 @@
     "build:web": "expo export --platform web && node scripts/copy-public-files.js && node scripts/generate-static-seo.js"
   },
   "dependencies": {
+    "@expo-google-fonts/dancing-script": "^0.4.2",
+    "@expo-google-fonts/inter": "^0.4.2",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-navigation/native": "^6.1.9",
+    "@supabase/supabase-js": "^2.87.0",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
+    "expo-asset": "~10.0.10",
+    "expo-auth-session": "~5.5.2",
+    "expo-build-properties": "~0.12.5",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.10",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-modules-core": "~1.12.26",
     "expo-router": "~3.5.23",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.28",
+    "expo-web-browser": "~13.0.3",
+    "luxon": "^3.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-web": "~0.19.10",
     "react-helmet-async": "^2.0.5",
-    "@expo/vector-icons": "^14.0.0",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-system-ui": "~3.0.0",
-    "expo-web-browser": "~13.0.3",
-    "expo-secure-store": "~13.0.2",
-    "expo-font": "~12.0.10",
-    "expo-asset": "~10.0.10",
-    "expo-splash-screen": "~0.27.5",
-    "expo-file-system": "~17.0.1",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-build-properties": "~0.12.5",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@supabase/supabase-js": "^2.87.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "date-fns": "^4.1.0",
-    "luxon": "^3.4.4",
-    "zod": "^3.22.4",
-    "zustand": "^4.4.7",
     "react-hook-form": "^7.49.0",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-razorpay": "^2.3.1",
     "react-native-reanimated": "~3.10.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "nativewind": "^2.0.11"
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/luxon": "^3.4.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3",
     "react-snap": "^1.23.0",
-    "tailwindcss": "3.3.2"
+    "supabase": "^1.192.5",
+    "tailwindcss": "3.3.2",
+    "typescript": "^5.1.3"
   },
   "reactSnap": {
     "source": "dist",
@@ -72,8 +84,7 @@
       "/interviews/product-management",
       "/interviews/data-analytics",
       "/interviews/data-science",
-      "/blog",
-      "/blog/cracking-pm-case-study"
+      "/blog"
     ],
     "exclude": [
       "/candidate",
