--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build:web": "expo export --platform web && node scripts/copy-public-files.js && node scripts/generate-static-seo.js"
   },
@@ -62,7 +62,7 @@
     "react-snap": "^1.23.0",
     "supabase": "^1.192.5",
     "tailwindcss": "3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "reactSnap": {
     "source": "dist",
