--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
                     "android":  "expo run:android",
                     "ios":  "expo run:ios",
                     "web":  "expo start --web",
-                    "build:web":  "expo export --platform web \u0026\u0026 node scripts/copy-public-files.js \u0026\u0026 node scripts/generate-static-seo.js"
-                },
+                    "build": "expo export",                  },
     "dependencies":  {
                          "@expo-google-fonts/dancing-script":  "^0.4.2",
                          "@expo-google-fonts/inter":  "^0.4.2",
