--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
                     "android":  "expo run:android",
                     "ios":  "expo run:ios",
                     "web":  "expo start --web",
-                    "build": "expo export",                  },
+                    "build": "expo export"            },
     "dependencies":  {
                          "@expo-google-fonts/dancing-script":  "^0.4.2",
                          "@expo-google-fonts/inter":  "^0.4.2",
