package json fix 2

--- a/package.json
+++ b/package.json
@@ -1,103 +1,104 @@
 {
-    "name":  "mentor-interview-platform",
-    "version":  "1.0.0",
-    "main":  "index.js",
-    "scripts":  {
-                    "start":  "expo start",
-                    "android":  "expo run:android",
-                    "ios":  "expo run:ios",
-                    "web":  "expo start --web",
-                    "build": "expo export"            },
-    "dependencies":  {
-                         "@expo-google-fonts/dancing-script":  "^0.4.2",
-                         "@expo-google-fonts/inter":  "^0.4.2",
-                         "@expo/vector-icons":  "~14.0.4",
-                         "@react-native-async-storage/async-storage":  "1.23.1",
-                         "@react-native-community/datetimepicker":  "8.2.0",
-                         "@react-native-community/netinfo":  "^11.4.1",
-                         "@react-native-google-signin/google-signin":  "^12.2.1",
-                         "@react-navigation/native":  "^6.1.9",
-                         "@supabase/supabase-js":  "^2.87.0",
-                         "date-fns":  "^4.1.0",
-                         "expo":  "~52.0.0",
-                         "expo-asset":  "~11.0.5",
-                         "expo-auth-session":  "~6.0.3",
-                         "expo-build-properties":  "~0.13.3",
-                         "expo-constants":  "~17.0.8",
-                         "expo-crypto":  "~14.0.2",
-                         "expo-document-picker":  "~13.0.3",
-                         "expo-file-system":  "~18.0.12",
-                         "expo-font":  "~13.0.4",
-                         "expo-linear-gradient":  "~14.0.2",
-                         "expo-linking":  "~7.0.5",
-                         "expo-router":  "~4.0.22",
-                         "expo-secure-store":  "~14.0.1",
-                         "expo-status-bar":  "~2.0.1",
-                         "expo-updates":  "~0.27.4",
-                         "expo-web-browser":  "~14.0.2",
-                         "luxon":  "^3.7.2",
-                         "nativewind":  "^2.0.11",
-                         "react":  "18.3.1",
-                         "react-dom":  "18.3.1",
-                         "react-helmet-async":  "^2.0.5",
-                         "react-hook-form":  "^7.49.0",
-                         "react-native":  "0.76.9",
-                         "react-native-gesture-handler":  "~2.20.2",
-                         "react-native-razorpay":  "^2.3.1",
-                         "react-native-reanimated":  "~3.16.1",
-                         "react-native-render-html":  "^6.3.4",
-                         "react-native-safe-area-context":  "4.12.0",
-                         "react-native-screens":  "~4.4.0",
-                         "react-native-svg":  "15.8.0",
-                         "react-native-url-polyfill":  "^2.0.0",
-                         "react-native-web":  "~0.19.10",
-                         "react-native-webrtc":  "^124.0.7",
-                         "zod":  "^3.22.4",
-                         "zustand":  "^4.4.7"
-                     },
-    "devDependencies":  {
-                            "@babel/core":  "^7.20.0",
-                            "@types/luxon":  "^3.7.1",
-                            "@types/react":  "~18.3.12",
-                            "react-snap":  "^1.23.0",
-                            "supabase":  "^1.192.5",
-                            "tailwindcss":  "3.3.2",
-                            "typescript":  "~5.3.3"
-                        },
-    "reactSnap":  {
-                      "source":  "dist",
-                      "minifyHtml":  {
-                                         "collapseWhitespace":  true,
-                                         "removeComments":  true
-                                     },
-                      "skipThirdPartyRequests":  true,
-                      "include":  [
-                                      "/",
-                                      "/how-it-works",
-                                      "/about",
-                                      "/contact",
-                                      "/faq",
-                                      "/privacy",
-                                      "/terms",
-                                      "/cancellation-policy",
-                                      "/interviews/hr",
-                                      "/interviews/product-management",
-                                      "/interviews/data-analytics",
-                                      "/interviews/data-science",
-                                      "/blog"
-                                  ],
-                      "exclude":  [
-                                      "/candidate",
-                                      "/candidate/*",
-                                      "/mentor",
-                                      "/mentor/*",
-                                      "/admin",
-                                      "/admin/*",
-                                      "/auth",
-                                      "/auth/*"
-                                  ]
-                  },
-    "private":  true,
-    "overrides":  {
-                  }
+  "name": "mentor-interview-platform",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "build": "expo export",
+    "build:web": "expo export"
+  },
+  "dependencies": {
+    "@expo-google-fonts/dancing-script": "^0.4.2",
+    "@expo-google-fonts/inter": "^0.4.2",
+    "@expo/vector-icons": "~14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-navigation/native": "^6.1.9",
+    "@supabase/supabase-js": "^2.87.0",
+    "date-fns": "^4.1.0",
+    "expo": "~52.0.0",
+    "expo-asset": "~11.0.5",
+    "expo-auth-session": "~6.0.3",
+    "expo-build-properties": "~0.13.3",
+    "expo-constants": "~17.0.8",
+    "expo-crypto": "~14.0.2",
+    "expo-document-picker": "~13.0.3",
+    "expo-file-system": "~18.0.12",
+    "expo-font": "~13.0.4",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.22",
+    "expo-secure-store": "~14.0.1",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
+    "expo-web-browser": "~14.0.2",
+    "luxon": "^3.7.2",
+    "nativewind": "^2.0.11",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.49.0",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-razorpay": "^2.3.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10",
+    "react-native-webrtc": "^124.0.7",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/luxon": "^3.7.1",
+    "@types/react": "~18.3.12",
+    "react-snap": "^1.23.0",
+    "supabase": "^1.192.5",
+    "tailwindcss": "3.3.2",
+    "typescript": "~5.3.3"
+  },
+  "reactSnap": {
+    "source": "dist",
+    "minifyHtml": {
+      "collapseWhitespace": true,
+      "removeComments": true
+    },
+    "skipThirdPartyRequests": true,
+    "include": [
+      "/",
+      "/how-it-works",
+      "/about",
+      "/contact",
+      "/faq",
+      "/privacy",
+      "/terms",
+      "/cancellation-policy",
+      "/interviews/hr",
+      "/interviews/product-management",
+      "/interviews/data-analytics",
+      "/interviews/data-science",
+      "/blog"
+    ],
+    "exclude": [
+      "/candidate",
+      "/candidate/*",
+      "/mentor",
+      "/mentor/*",
+      "/admin",
+      "/admin/*",
+      "/auth",
+      "/auth/*"
+    ]
+  },
+  "private": true,
+  "overrides": {}
 }
